# omicidx-api

./: .dir-locals.el  .dockerignore  .gitignore  DEVELOPER.md  Dockerfile  README.md  build_and_push.sh  config.ini.example  pyproject.toml  pytest.ini  requirements-dev.txt  rest_examples.txt  run_server_local.sh  setup.py
.github/workflows/: pythonapp.yml
app/: configuration.py  cursor.py  dependers.py  elastic_connection.py  elastic_document.py  elastic_utils.py  esclient.py  field_descriptors.py  luqum_helper.py  main.py  mappings_stuff.py  request_models.py  response_models.py  schema.py  test_cursor.py  test_main.py
app/api_v1/: api.py
app/api_v1/endpoints/: biosample.py  geo.py  sra.py
app/core/: configuration.py
app/elasticsearch/: connection.py  field_descriptors.py  utils.py
app/graphql/: graphene_elastic_utils.py
app/routers/: biosample.py  sra.py
app/schema/: schema.py
app/tests/: test_cursor.py  test_main.py  test_rest_api.py  test_rest_search.py
app/tests/elastic_graphene/: _test_converters.py
kubernetes/: cluster_issuer.yaml  deployment.yml  ingress.yaml  service.yml
tests/: test_app.py  test_rest_search.py  test_sra.py
