[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
uvicorn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
