[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"
fastapi = "^0.42.0"
elasticsearch = "^7.0.5"
elasticsearch_dsl = "^7.0.0"
graphene_elastic = "^0.6"
omicidx = { git = "git@github.com:seandavi/omicidx.git", branch = "master" }
email-validator = "^1.0.4"
pyparsing = "^2.4"
toml = "^0.10.0"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
uvicorn = "^0.9.0"
pytest = "^5.2.1"
yapf = "^0.28.0"
sphinx = "^2.2"
fett = "^0.3.2"
sphinx_graphiql = { git = "git@github.com:seandavi/sphinx-graphiql.git", branch = "master" }


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
